1999-06-18  Mark Mitchell  <mark@codesourcery.com>

	* init.c (expand_aggr_vbase_init): Add flag parameter.
	(build_partial_cleanup_for): Remove, inlining into ..
	(expand_cleanup_for_base): ... here.  Take flag parameter.
	(emit_base_init): Pass the in_chrg parameter to
	emit_aggr_vbase_init. 
	(emit_aggr_vbase_init): Pass it to expand_cleanup_for_base.
	
1999-06-16  Mark Mitchell  <mark@codesourcery.com>

	* decl2.c (import_export_decl): Use same_type_p, rather than
	relying on pointer-equality for types.

	* method.c (do_build_copy_constructor): Simplify.

	* call.c (build_method_call): Remove bogus code for two-argument
	delete.
	* init.c (build_new_1): Expand on comment, and remove dead code.

	* init.c (expand_cleanup_for_base): New function, split out
	from ...
	(emit_base_init): Here.
	(expand_aggr_vbase_init): Use it.

1999-06-15  Mark Mitchell  <mark@codesourcery.com>

	* cp-tree.h (class_cache_firstobj): Declare.
	(maybe_push_cache_obstack): Rename to push_cache_obstack.
	* class.c (permanent_obstack): Remove declaration.
	(class_cache_firstobj): Make it global.
	(add_method): Don't use permanent_obstack directly.
	(pushclass): Only free the class_cache_obstack if we know how far
	back to free it.
	(maybe_push_cache_obstack): Rename to push_cache_obstack.
	* decl.c: Remove dead comment.
	(saved_scope): Add class_cache_firstobj.
	(push_to_top_level): Save it.
	(pop_from_top_level): Restore it.
	(push_class_level_binding): Use push_cache_obstack, not
	maybe_push_cache_obstack.
	* search.c (push_class_decls): Likewise.

1999-06-14  Nathan Sidwell  <nathan@acm.org>

	* call.c (build_new_op): Remove REF_BIND from all operands.

1999-06-07  Mark Mitchell  <mark@codesourcery.com>

	* search.c (convert_pointer_to_single_level): Reimplement without
	using get_binfo.

1999-06-06  Mark Mitchell  <mark@codesourcery.com>

	* method.c (is_back_referenceable_type): Back-reference bools when
	not squangling.

1999-06-04  Jason Merrill  <jason@yorick.cygnus.com>
