@@ -1,3 +1,9 @@
+1999-06-19  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl.c (expand_static_init): When building an anonymous function
+	for use with atexit, compute its body before and after entering
+	the function.
+
 1999-06-18  Mark Mitchell  <mark@codesourcery.com>
 
 	* init.c (expand_aggr_vbase_init): Add flag parameter.
